[FLINK-4177] Harden CassandraConnectorTest