@@ -20,38 +20,35 @@ package org.apache.flink.streaming.connectors.cassandra;
 
 import com.datastax.driver.core.Cluster;
 import com.datastax.driver.core.ConsistencyLevel;
+import com.datastax.driver.core.HostDistance;
+import com.datastax.driver.core.PoolingOptions;
 import com.datastax.driver.core.QueryOptions;
 import com.datastax.driver.core.ResultSet;
 import com.datastax.driver.core.Row;
 import com.datastax.driver.core.Session;
-
-import org.apache.cassandra.service.CassandraDaemon;
-
+import com.datastax.driver.core.SocketOptions;
+import org.apache.commons.io.FileUtils;
 import org.apache.flink.api.common.ExecutionConfig;
-import org.apache.flink.api.common.typeinfo.TypeHint;
-import org.apache.flink.api.common.typeinfo.TypeInformation;
-import org.apache.flink.api.java.DataSet;
-import org.apache.flink.api.java.ExecutionEnvironment;
+import org.apache.flink.api.common.JobID;
+import org.apache.flink.api.common.io.InputFormat;
+import org.apache.flink.api.common.io.OutputFormat;
+import org.apache.flink.api.common.typeutils.TypeSerializer;
+import org.apache.flink.api.java.tuple.Tuple;
 import org.apache.flink.api.java.tuple.Tuple3;
 import org.apache.flink.api.java.typeutils.TupleTypeInfo;
 import org.apache.flink.api.java.typeutils.TypeExtractor;
 import org.apache.flink.batch.connectors.cassandra.CassandraInputFormat;
 import org.apache.flink.batch.connectors.cassandra.CassandraOutputFormat;
-import org.apache.flink.configuration.ConfigConstants;
 import org.apache.flink.configuration.Configuration;
+import org.apache.flink.core.io.InputSplit;
 import org.apache.flink.runtime.io.network.api.writer.ResultPartitionWriter;
 import org.apache.flink.runtime.minicluster.LocalFlinkMiniCluster;
 import org.apache.flink.runtime.testutils.CommonTestUtils;
-import org.apache.flink.streaming.api.datastream.DataStream;
-import org.apache.flink.streaming.api.datastream.DataStreamSource;
-import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;
-import org.apache.flink.streaming.api.functions.source.SourceFunction;
+import org.apache.flink.runtime.testutils.CommonTestUtils.PipeForwarder;
+import org.apache.flink.streaming.runtime.operators.CheckpointCommitter;
 import org.apache.flink.streaming.runtime.operators.WriteAheadSinkTestBase;
 import org.apache.flink.streaming.util.OneInputStreamOperatorTestHarness;
-import org.apache.flink.streaming.util.TestStreamEnvironment;
-import org.apache.flink.test.util.TestEnvironment;
 
-import org.junit.After;
 import org.junit.AfterClass;
 import org.junit.Assert;
 import org.junit.Before;
@@ -70,31 +67,38 @@ import java.io.BufferedWriter;
 import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
+import java.io.StringWriter;
 import java.util.ArrayList;
+import java.util.List;
+import java.util.Random;
 import java.util.Scanner;
 import java.util.UUID;
 
 import static org.junit.Assert.*;
+import static org.apache.flink.runtime.testutils.CommonTestUtils.getCurrentClasspath;
+import static org.apache.flink.runtime.testutils.CommonTestUtils.getJavaCommandPath;
+import static org.apache.flink.runtime.testutils.CommonTestUtils.isProcessAlive;
 
 @SuppressWarnings("serial")
-@PowerMockIgnore("javax.management.*")
 @RunWith(PowerMockRunner.class)
 @PrepareForTest(ResultPartitionWriter.class)
-public class CassandraConnectorITCase extends WriteAheadSinkTestBase<Tuple3<String, Integer, Integer>, CassandraTupleWriteAheadSink<Tuple3<String, Integer, Integer>>> {
+public class CassandraConnectorITCase extends WriteAheadSinkTestBase<Tuple3<String, Integer, Integer>, CassandraConnectorITCase.TestCassandraTupleWriteAheadSink<Tuple3<String, Integer, Integer>>> {
 
 	private static final Logger LOG = LoggerFactory.getLogger(CassandraConnectorITCase.class);
 	private static File tmpDir;
 
 	private static final boolean EMBEDDED = true;
 
-	private static EmbeddedCassandraService cassandra;
+	private static Process cassandra;
 
 	private static ClusterBuilder builder = new ClusterBuilder() {
 		@Override
 		protected Cluster buildCluster(Cluster.Builder builder) {
 			return builder
 				.addContactPoint("127.0.0.1")
+				.withSocketOptions(new SocketOptions().setConnectTimeoutMillis(30000))
 				.withQueryOptions(new QueryOptions().setConsistencyLevel(ConsistencyLevel.ONE).setSerialConsistencyLevel(ConsistencyLevel.LOCAL_SERIAL))
+				.withPoolingOptions(new PoolingOptions().setConnectionsPerHost(HostDistance.LOCAL, 32, 32).setMaxRequestsPerConnection(HostDistance.LOCAL, 2048).setPoolTimeoutMillis(15000))
 				.withoutJMXReporting()
 				.withoutMetrics().build();
 		}
@@ -104,11 +108,9 @@ public class CassandraConnectorITCase extends WriteAheadSinkTestBase<Tuple3<Stri
 	private static Session session;
 
 	private static final String CREATE_KEYSPACE_QUERY = "CREATE KEYSPACE flink WITH replication= {'class':'SimpleStrategy', 'replication_factor':1};";
-	private static final String DROP_KEYSPACE_QUERY = "DROP KEYSPACE flink;";
-	private static final String CREATE_TABLE_QUERY = "CREATE TABLE flink.test (id text PRIMARY KEY, counter int, batch_id int);";
-	private static final String CLEAR_TABLE_QUERY = "TRUNCATE flink.test;";
-	private static final String INSERT_DATA_QUERY = "INSERT INTO flink.test (id, counter, batch_id) VALUES (?, ?, ?)";
-	private static final String SELECT_DATA_QUERY = "SELECT * FROM flink.test;";
+	private static final String CREATE_TABLE_QUERY = "CREATE TABLE IF NOT EXISTS flink.$TABLE (id text PRIMARY KEY, counter int, batch_id int);";
+	private static final String INSERT_DATA_QUERY = "INSERT INTO flink.$TABLE (id, counter, batch_id) VALUES (?, ?, ?)";
+	private static final String SELECT_DATA_QUERY = "SELECT * FROM flink.$TABLE;";
 
 	private static final ArrayList<Tuple3<String, Integer, Integer>> collection = new ArrayList<>(20);
 
@@ -118,25 +120,12 @@ public class CassandraConnectorITCase extends WriteAheadSinkTestBase<Tuple3<Stri
 		}
 	}
 
-	private static class EmbeddedCassandraService {
-		CassandraDaemon cassandraDaemon;
-
-		public void start() throws IOException {
-			this.cassandraDaemon = new CassandraDaemon();
-			this.cassandraDaemon.init(null);
-			this.cassandraDaemon.start();
-		}
-
-		public void stop() {
-			this.cassandraDaemon.stop();
-		}
-	}
+	private static StringWriter sw;
+	
+	private static Random random = new Random();
+	private int lastInt;
 
 	private static LocalFlinkMiniCluster flinkCluster;
-
-	// ------------------------------------------------------------------------
-	//  Cluster Setup (Cassandra & Flink)
-	// ------------------------------------------------------------------------
 
 	@BeforeClass
 	public static void startCassandra() throws IOException {
@@ -166,49 +155,86 @@ public class CassandraConnectorITCase extends WriteAheadSinkTestBase<Tuple3<Stri
 			}
 		}
 
-
-		// Tell cassandra where the configuration files are.
-		// Use the test configuration file.
-		System.setProperty("cassandra.config", tmp.getAbsoluteFile().toURI().toString());
-
 		if (EMBEDDED) {
-			cassandra = new EmbeddedCassandraService();
-			cassandra.start();
+			String javaCommand = getJavaCommandPath();
+
+			// create a logging file for the process
+			File tempLogFile = File.createTempFile("testlogconfig", "properties");
+			CommonTestUtils.printLog4jDebugConfig(tempLogFile);
+
+			// start the task manager process
+			String[] command = new String[]{
+				javaCommand,
+				"-Dlog.level=DEBUG",
+				"-Dlog4j.configuration=file:" + tempLogFile.getAbsolutePath(),
+				"-Dcassandra.config=" + tmp.toURI(),
+				// these options were taken directly from the jvm.options file in the cassandra repo
+				"-XX:+UseThreadPriorities",
+				"-Xss256k",
+				"-XX:+AlwaysPreTouch",
+				"-XX:+UseTLAB",
+				"-XX:+ResizeTLAB",
+				"-XX:+UseNUMA",
+				"-XX:+PerfDisableSharedMem",
+				"-XX:+UseParNewGC",
+				"-XX:+UseConcMarkSweepGC",
+				"-XX:+CMSParallelRemarkEnabled",
+				"-XX:SurvivorRatio=8",
+				"-XX:MaxTenuringThreshold=1",
+				"-XX:CMSInitiatingOccupancyFraction=75",
+				"-XX:+UseCMSInitiatingOccupancyOnly",
+				"-XX:CMSWaitDuration=10000",
+				"-XX:+CMSParallelInitialMarkEnabled",
+				"-XX:+CMSEdenChunksRecordAlways",
+				"-XX:+CMSClassUnloadingEnabled",
+
+				"-classpath", getCurrentClasspath(),
+				EmbeddedCassandraService.class.getName()
+			};
+
+			ProcessBuilder bld = new ProcessBuilder(command);
+			cassandra = bld.start();
+			sw = new StringWriter();
+			new PipeForwarder(cassandra.getErrorStream(), sw);
 		}
 
-		try {
-			Thread.sleep(1000 * 10);
-		} catch (InterruptedException e) { //give cassandra a few seconds to start up
+		int attempt = 0;
+		while (true) {
+			try {
+				attempt++;
+				cluster = builder.getCluster();
+				session = cluster.connect();
+				break;
+			} catch (Exception e) {
+				if (attempt > 30) {
+					throw e;
+				}
+				try {
+					Thread.sleep(1000);
+				} catch (InterruptedException e1) {
+				}
+			}
 		}
-
-		cluster = builder.getCluster();
-		session = cluster.connect();
+		LOG.debug("Connection established after " + attempt + " attempts.");
 
 		session.execute(CREATE_KEYSPACE_QUERY);
-		session.execute(CREATE_TABLE_QUERY);
-	}
+		session.execute(CREATE_TABLE_QUERY.replace("$TABLE", "flink_initial"));
 
-	@BeforeClass
-	public static void startFlink() throws Exception {
-		Configuration config = new Configuration();
-		config.setInteger(ConfigConstants.TASK_MANAGER_NUM_TASK_SLOTS, 4);
-
-		flinkCluster = new LocalFlinkMiniCluster(config);
-		flinkCluster.start();
-	}
-
-	@AfterClass
-	public static void stopFlink() {
-		if (flinkCluster != null) {
-			flinkCluster.stop();
-			flinkCluster = null;
+		try {
+			Thread.sleep(5000);
+		} catch (InterruptedException e) {
 		}
+	}
+
+	@Before
+	public void createTable() {
+		lastInt = random.nextInt(Integer.MAX_VALUE);
+		session.execute(CREATE_TABLE_QUERY.replace("$TABLE", "flink_" + lastInt));
 	}
 
 	@AfterClass
 	public static void closeCassandra() {
 		if (session != null) {
-			session.executeAsync(DROP_KEYSPACE_QUERY);
 			session.close();
 		}
 
@@ -216,29 +242,24 @@ public class CassandraConnectorITCase extends WriteAheadSinkTestBase<Tuple3<Stri
 			cluster.close();
 		}
 
-		if (cassandra != null) {
-			cassandra.stop();
+		if (isProcessAlive(cassandra)) {
+			try {
+				cassandra.getOutputStream().write(1);
+				cassandra.getOutputStream().flush();
+			} catch (IOException e) {
+			}
+			cassandra.destroy();
 		}
 
-		if (tmpDir != null) {
-			//noinspection ResultOfMethodCallIgnored
-			tmpDir.delete();
+
+		try {
+			FileUtils.deleteDirectory(tmpDir);
+		} catch (IOException e) {
+			LOG.error("Failed to delete tmp directory.", e);
 		}
-	}
-
-	// ------------------------------------------------------------------------
-	//  Test preparation & cleanup
-	// ------------------------------------------------------------------------
-
-	@Before
-	public void initializeExecutionEnvironment() {
-		TestStreamEnvironment.setAsContext(flinkCluster, 4);
-		new TestEnvironment(flinkCluster, 4, false).setAsContext();
-	}
-
-	@After
-	public void deleteSchema() throws Exception {
-		session.executeAsync(CLEAR_TABLE_QUERY);
+		if (sw != null) {
+			//System.out.println(sw.toString());
+		}
 	}
 
 	// ------------------------------------------------------------------------
@@ -246,9 +267,9 @@ public class CassandraConnectorITCase extends WriteAheadSinkTestBase<Tuple3<Stri
 	// ------------------------------------------------------------------------
 
 	@Override
-	protected CassandraTupleWriteAheadSink<Tuple3<String, Integer, Integer>> createSink() throws Exception {
-		return new CassandraTupleWriteAheadSink<>(
-			INSERT_DATA_QUERY,
+	protected TestCassandraTupleWriteAheadSink<Tuple3<String, Integer, Integer>> createSink() throws Exception {
+		return new TestCassandraTupleWriteAheadSink<>(
+			"flink_" + lastInt,
 			TypeExtractor.getForObject(new Tuple3<>("", 0, 0)).createSerializer(new ExecutionConfig()),
 			builder,
 			new CassandraCommitter(builder));
@@ -267,9 +288,9 @@ public class CassandraConnectorITCase extends WriteAheadSinkTestBase<Tuple3<Stri
 	@Override
 	protected void verifyResultsIdealCircumstances(
 		OneInputStreamOperatorTestHarness<Tuple3<String, Integer, Integer>, Tuple3<String, Integer, Integer>> harness,
-		CassandraTupleWriteAheadSink<Tuple3<String, Integer, Integer>> sink) {
+		TestCassandraTupleWriteAheadSink<Tuple3<String, Integer, Integer>> sink) {
 
-		ResultSet result = session.execute(SELECT_DATA_QUERY);
+		ResultSet result = session.execute(SELECT_DATA_QUERY.replace("$TABLE", sink.tableName));
 		ArrayList<Integer> list = new ArrayList<>();
 		for (int x = 1; x <= 60; x++) {
 			list.add(x);
@@ -284,9 +305,9 @@ public class CassandraConnectorITCase extends WriteAheadSinkTestBase<Tuple3<Stri
 	@Override
 	protected void verifyResultsDataPersistenceUponMissedNotify(
 		OneInputStreamOperatorTestHarness<Tuple3<String, Integer, Integer>, Tuple3<String, Integer, Integer>> harness,
-		CassandraTupleWriteAheadSink<Tuple3<String, Integer, Integer>> sink) {
+		TestCassandraTupleWriteAheadSink<Tuple3<String, Integer, Integer>> sink) {
 
-		ResultSet result = session.execute(SELECT_DATA_QUERY);
+		ResultSet result = session.execute(SELECT_DATA_QUERY.replace("$TABLE", sink.tableName));
 		ArrayList<Integer> list = new ArrayList<>();
 		for (int x = 1; x <= 60; x++) {
 			list.add(x);
@@ -301,9 +322,8 @@ public class CassandraConnectorITCase extends WriteAheadSinkTestBase<Tuple3<Stri
 	@Override
 	protected void verifyResultsDataDiscardingUponRestore(
 		OneInputStreamOperatorTestHarness<Tuple3<String, Integer, Integer>, Tuple3<String, Integer, Integer>> harness,
-		CassandraTupleWriteAheadSink<Tuple3<String, Integer, Integer>> sink) {
-
-		ResultSet result = session.execute(SELECT_DATA_QUERY);
+		TestCassandraTupleWriteAheadSink<Tuple3<String, Integer, Integer>> sink) {
+		ResultSet result = session.execute(SELECT_DATA_QUERY.replace("$TABLE", sink.tableName));
 		ArrayList<Integer> list = new ArrayList<>();
 		for (int x = 1; x <= 20; x++) {
 			list.add(x);
@@ -320,18 +340,19 @@ public class CassandraConnectorITCase extends WriteAheadSinkTestBase<Tuple3<Stri
 
 	@Test
 	public void testCassandraCommitter() throws Exception {
-		CassandraCommitter cc1 = new CassandraCommitter(builder);
-		cc1.setJobId("job");
+		String jobID = new JobID().toString();
+		CassandraCommitter cc1 = new CassandraCommitter(builder, "flink_auxiliary_cc");
+		cc1.setJobId(jobID);
 		cc1.setOperatorId("operator");
 		cc1.setOperatorSubtaskId(0);
 
-		CassandraCommitter cc2 = new CassandraCommitter(builder);
-		cc2.setJobId("job");
+		CassandraCommitter cc2 = new CassandraCommitter(builder, "flink_auxiliary_cc");
+		cc2.setJobId(jobID);
 		cc2.setOperatorId("operator");
 		cc2.setOperatorSubtaskId(1);
 
-		CassandraCommitter cc3 = new CassandraCommitter(builder);
-		cc3.setJobId("job");
+		CassandraCommitter cc3 = new CassandraCommitter(builder, "flink_auxiliary_cc");
+		cc3.setJobId(jobID);
 		cc3.setOperatorId("operator1");
 		cc3.setOperatorSubtaskId(0);
 
@@ -358,8 +379,8 @@ public class CassandraConnectorITCase extends WriteAheadSinkTestBase<Tuple3<Stri
 		cc2.close();
 		cc3.close();
 
-		cc1 = new CassandraCommitter(builder);
-		cc1.setJobId("job");
+		cc1 = new CassandraCommitter(builder, "flink_auxiliary_cc");
+		cc1.setJobId(jobID);
 		cc1.setOperatorId("operator");
 		cc1.setOperatorSubtaskId(0);
 
@@ -378,70 +399,94 @@ public class CassandraConnectorITCase extends WriteAheadSinkTestBase<Tuple3<Stri
 
 	@Test
 	public void testCassandraTupleAtLeastOnceSink() throws Exception {
-		StreamExecutionEnvironment env = StreamExecutionEnvironment.getExecutionEnvironment();
-		env.setParallelism(1);
+		CassandraTupleSink<Tuple3<String, Integer, Integer>> sink = new CassandraTupleSink<>(INSERT_DATA_QUERY.replace("$TABLE", "flink_" + lastInt), builder);
 
-		DataStream<Tuple3<String, Integer, Integer>> source = env.fromCollection(collection);
-		source.addSink(new CassandraTupleSink<Tuple3<String, Integer, Integer>>(INSERT_DATA_QUERY, builder));
+		sink.open(new Configuration());
 
-		env.execute();
+		for (Tuple3<String, Integer, Integer> value : collection) {
+			sink.send(value);
+		}
 
-		ResultSet rs = session.execute(SELECT_DATA_QUERY);
-		Assert.assertEquals(20, rs.all().size());
+		sink.close();
+
+		synchronized (sink.updatesPending) {
+			if (sink.updatesPending.get() != 0) {
+				sink.updatesPending.wait();
+			}
+		}
+
+		ResultSet rs = session.execute(SELECT_DATA_QUERY.replace("$TABLE", "flink_" + lastInt));
+		try {
+			Assert.assertEquals(20, rs.all().size());
+		} catch (Throwable e) {
+			LOG.error("test failed.", e);
+		}
 	}
 
 	@Test
 	public void testCassandraPojoAtLeastOnceSink() throws Exception {
-		StreamExecutionEnvironment env = StreamExecutionEnvironment.getExecutionEnvironment();
-		env.setParallelism(1);
+		session.execute(CREATE_TABLE_QUERY.replace("$TABLE", "test"));
 
-		DataStreamSource<Pojo> source = env
-			.addSource(new SourceFunction<Pojo>() {
+		CassandraPojoSink<Pojo> sink = new CassandraPojoSink<>(Pojo.class, builder);
 
-				private boolean running = true;
-				private volatile int cnt = 0;
+		sink.open(new Configuration());
 
-				@Override
-				public void run(SourceContext<Pojo> ctx) throws Exception {
-					while (running) {
-						ctx.collect(new Pojo(UUID.randomUUID().toString(), cnt, 0));
-						cnt++;
-						if (cnt == 20) {
-							cancel();
-						}
-					}
-				}
+		for (int x = 0; x < 20; x++) {
+			sink.send(new Pojo(UUID.randomUUID().toString(), x, 0));
+		}
 
-				@Override
-				public void cancel() {
-					running = false;
-				}
-			});
+		sink.close();
 
-		source.addSink(new CassandraPojoSink<>(Pojo.class, builder));
+		synchronized (sink.updatesPending) {
+			while (sink.updatesPending.get() != 0) {
+				sink.updatesPending.wait();
+			}
+		}
 
-		env.execute();
-
-		ResultSet rs = session.execute(SELECT_DATA_QUERY);
-		Assert.assertEquals(20, rs.all().size());
+		ResultSet rs = session.execute(SELECT_DATA_QUERY.replace("$TABLE", "test"));
+		try {
+			assertEquals(20, rs.all().size());
+		} catch (Throwable e) {
+			LOG.error("test failed.", e);
+		}
 	}
 
 	@Test
 	public void testCassandraBatchFormats() throws Exception {
-		ExecutionEnvironment env = ExecutionEnvironment.getExecutionEnvironment();
-		env.setParallelism(1);
+		OutputFormat<Tuple3<String, Integer, Integer>> sink = new CassandraOutputFormat<>(INSERT_DATA_QUERY.replace("$TABLE", "flink_" + lastInt), builder);
+		sink.configure(new Configuration());
+		sink.open(0, 1);
+		
+		for (Tuple3<String, Integer, Integer> value : collection) {
+			sink.writeRecord(value);
+		}
+		
+		sink.close();
+		
+		InputFormat<Tuple3<String, Integer, Integer>, InputSplit> source = new CassandraInputFormat<>(SELECT_DATA_QUERY.replace("$TABLE", "flink_" + lastInt), builder);
+		source.configure(new Configuration());
+		source.open(null);
+		
+		List<Tuple3<String, Integer, Integer>> result = new ArrayList<>();
+		
+		while (!source.reachedEnd()) {
+			result.add(source.nextRecord(new Tuple3<String, Integer, Integer>()));
+		}
+		
+		source.close();
+		try {
+			assertEquals(20, result.size());
+		} catch (Throwable e) {
+			LOG.error("test failed.", e);
+		}
+	}
 
-		DataSet<Tuple3<String, Integer, Integer>> dataSet = env.fromCollection(collection);
-		dataSet.output(new CassandraOutputFormat<Tuple3<String, Integer, Integer>>(INSERT_DATA_QUERY, builder));
+	protected static class TestCassandraTupleWriteAheadSink<IN extends Tuple> extends CassandraTupleWriteAheadSink<IN> {
+		private String tableName;
 
-		env.execute("Write data");
-
-		DataSet<Tuple3<String, Integer, Integer>> inputDS = env.createInput(
-			new CassandraInputFormat<Tuple3<String, Integer, Integer>>(SELECT_DATA_QUERY, builder),
-			TypeInformation.of(new TypeHint<Tuple3<String, Integer, Integer>>(){}));
-
-
-		long count = inputDS.count();
-		Assert.assertEquals(count, 20L);
+		private TestCassandraTupleWriteAheadSink(String tableName, TypeSerializer<IN> serializer, ClusterBuilder builder, CheckpointCommitter committer) throws Exception {
+			super(INSERT_DATA_QUERY.replace("$TABLE", tableName), serializer, builder, committer);
+			this.tableName = tableName;
+		}
 	}
 }
